# Demo

./: .gitignore  .gitmodules  CMakeLists.txt  prebuild.sh  setup_network.sh
3pp/: CMakeLists.txt
c++/: CMakeLists.txt
c++/atomic/: SpinLock.cpp  SpinLock.h
c++/cmake/: SanitizeCheck.cmake  common.cmake
c++/koll/: CMakeLists.txt  Common.cpp  Common.h  Test.cpp  Test.h  kSpinLock.cc  kSpinLock.h
c++/libs/timer/: CMakeLists.txt  kTimer.h  kTimerManager.cc  kTimerManager.h
c++/std/: CMakeLists.txt  Lambda.cc  SmartPointer.cc  main.c
c++/test/: CMakeLists.txt  test.cpp  uniform_initializer.cc
c++/unit_test/: CMakeLists.txt  DeletegatingConstructor.cc  SmartPointer.cc  long_poll.plantuml  main.cc
c++/unit_test/api/: strncmp.cc
c++/unit_test/apis/: CMakeLists.txt  get_long_opt.cc
c++/unit_test/apis/atomic/: gcc_sync_apis.cc
c++/unit_test/apis/jemalloc/: jemallocTS.cc
c++/unit_test/atomic/: CMakeLists.txt  cpp_atomic.cc  gcc_atomic_apis.cc
c++/unit_test/cpp_features/: CMakeLists.txt  Lambda.cc  binary_literal.cc  chrono.cc  constexpr.cc  digit_seperator.cc  if_constexpr.cc  nested_namespaces.cc  shared_ptr.cc  tuple.cc  unique_ptr.cc  universal_ref.cc  variable_defined_in_if.cc  variable_template.cc
c++/unit_test/cpp_features/attributes/: deprecated.cc
c++/unit_test/data_structure/: CMakeLists.txt  variant.cc
c++/unit_test/jemalloc/: CMakeLists.txt  jemallocTS.cc
c++/unit_test/ktimer_mgr/: CMakeLists.txt  DeletegatingConstructor.cc
c++/unit_test/lambda/: CMakeLists.txt  LambdaTS.cc
c++/unit_test/lock/: CMakeLists.txt  lock_guard.cc
c++/unit_test/smart_pointer/: CMakeLists.txt  SmartPointerTS.cc
c++/unit_test/std/: CMakeLists.txt  accumulate.cc  bind.cc  copy_if.cc  count_if.cc  decay.cc  find.cc  for_each.cc  function.cc  remove.cc  sort.cc  stdTS.cc
c++/unit_test/std/count/: all_of.cc  any_of.cc  count.cc  none_of.cc
c++/unit_test/std/find/: adjacent_find.cc  find.cc  find_end.cc  find_first_of.cc  find_if.cc  find_if_not.cc  search.cc  search_n.cc
c++/unit_test/std/sort/: lower_bound.cc  max_element.cc  min_element.cc  nth_element.cc  partial_sort.cc  shuffle.cc  stable_sort.cc  upper_bound.cc
docker_k8s/: Dockerfile  main.c  myApp
docker_k8s/cluster_kind/: cluster_in_kind.yaml
docker_k8s/configmap/: myapp-config-map.yaml
docker_k8s/cronjob/: my-study-cron-job.yaml
docker_k8s/deployment/: myStudy-replicaset.yaml
docker_k8s/ingress/: ingress.yaml
docker_k8s/job/: my-study-job.yaml
docker_k8s/network_policy/: myapp-network-policy.yaml
docker_k8s/pod/: myApp-pod.yaml
docker_k8s/secret/: myapp-secret.yaml
docker_k8s/service/: my-study-service-cluster-ip.yaml  my-study-service.yaml
docker_k8s/storage/: my-app-mount-volume.yaml
goDemo/: go.mod  main.go
goDemo/koll/: examples_test.go  go.mod  json_test.go  koll.go  timer_test.go
goDemo/koll/example/: methods.go
goDemo/koll/io/: file.go
python/: test.py
