koll_add_test(
    TEST_NAME
        UNIT_TEST_EXE_NAME
    PRIVATE
        main.cc
        SmartPointer.cc
        Lambda.cc
        DeletegatingConstructor.cc
        jemalloc/jemallocTS.cc
        lock/lock_guard.cc
        opendir/opendirTs.cc
        api/strncmp.cc
    DEPENDENCIES
        gtest
        koll
        jemalloc
        timer
)

add_subdirectory(atomic)
add_subdirectory(jemalloc)